# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: run-update-script.yml
cmake_missing_pytest_files/: check_for_missing_py_tests.py
mantid_release_note_check/: mantid_release_note_check.py
tests/: mantid_release_note_check_test.py
