[metadata]
name = mantid_pre_commit_hooks
version = 1.1.0
description = Various Mantid Pre-commit hooks

[options]
packages = find:
install_requires =
    gitpython

[options.entry_points]
console_scripts =
    cmake-missing-pytest-files = cmake_missing_pytest_files.check_for_missing_py_tests:main
    mantid-release-note-check = mantid_release_note_check.mantid_release_note_check:main
